[tool.poetry]
name = "tryalot"
version = "0.3.7"
description = "Try a lot without worrying about the hassle."
authors = ["Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yuttie/tryalot"
repository = "https://github.com/yuttie/tryalot"

[tool.poetry.dependencies]
python = "^3.7"
zstandard = "^0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
numpy = "^1.19.4"
holoviews = {extras = ["recommended"], version = "^1.14.1"}
torch = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
