[tool.poetry]
name = "tryalot"
version = "0.3.13"
description = "Try a lot without worrying about the hassle."
authors = ["Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yuttie/tryalot"
repository = "https://github.com/yuttie/tryalot"

[tool.poetry.dependencies]
python = "^3.8"
zstandard = "^0.16.0"
graphviz = "^0.19.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
numpy = "^1.22.0"
holoviews = "^1.14.1"
matplotlib = "^3.5.1"
torch = "^1.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
